--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+modemmanager (1.18.6-2) unstable; urgency=medium
+
+  * d/control: build-depend on libqrtr-glib.
+    This enables support for the QRTR protocol so we can use the integrated
+    modem found on Qualcomm SoCs.
+
+ -- Arnaud Ferraris <arnaud.ferraris@gmail.com>  Wed, 23 Feb 2022 13:58:35 +0100
+
 modemmanager (1.18.6-1) unstable; urgency=medium
 
   [ Bjørn Bürger ]
