--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+modemmanager (1.18.6-1~bpo11+1) bullseye-backports; urgency=medium
+
+  * Create backport for Debian 11.
+
+ -- Martin <debacle@debian.org>  Wed, 23 Mar 2022 18:08:51 +0000
+
 modemmanager (1.18.6-1) unstable; urgency=medium
 
   [ Bjørn Bürger ]
